--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Electro-Sense | Инновации на пальцах</title>
+    <meta name="description" content="Образовательная платформа Electro-Sense. Технология нового поколения доступным языком.">
+
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   </head>
   <body>
     <load src="./partials/header.html" />
@@ -16,6 +24,20 @@
     </main>
 
     <load src="./partials/footer.html" />
+    <div class="cookie-popup" id="cookiePopup">
+      <div class="cookie-popup__content">
+          <div class="cookie-popup__icon">
+              <i data-lucide="cookie"></i>
+          </div>
+          <div class="cookie-popup__text">
+              <h3>Мы используем Cookies</h3>
+              <p>Этот сайт использует файлы cookie для улучшения работы и анализа трафика. Подробнее — в нашей <a href="cookies.html">Cookie политике</a>.</p>
+          </div>
+          <div class="cookie-popup__actions">
+              <button class="btn btn--sm" id="acceptCookie">Принять</button>
+          </div>
+      </div>
+  </div>
 
     <script type="module" src="./main.js"></script>
   </body>
