--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
           </div>
           <div class="cookie-popup__text">
               <h3>Мы используем Cookies</h3>
-              <p>Этот сайт использует файлы cookie для улучшения работы и анализа трафика. Подробнее — в нашей <a href="cookies.html">Cookie политике</a>.</p>
+              <p>Этот сайт использует файлы cookie. <a href="./cookies.html">Подробнее</a>.</p>
           </div>
           <div class="cookie-popup__actions">
               <button class="btn btn--sm" id="acceptCookie">Принять</button>
