--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Electro-Sense | Инновации на пальцах</title>
     <meta name="description" content="Образовательная платформа Electro-Sense. Технология нового поколения доступным языком.">
 
-    <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' y1='0' x2='512' y2='512' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0%25' stop-color='%23007AFF'/%3E%3Cstop offset='100%25' stop-color='%238B5CF6'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath d='M365.3 56.6C348.6 36.9 319.5 32.7 297.4 46.8L130.7 153.5C108.6 167.6 99.4 195.1 110.1 219.2L146.4 300.8L85.6 339.7C63.5 353.9 60.1 382.7 78.1 401.8L146.7 474.6C164.7 493.7 195.9 492.4 216.3 471.6L443.4 240.3C463.8 219.5 463.4 186.1 442.5 165.9L365.3 56.6Z' fill='url(%23a)'/%3E%3Cpath d='M305 130L200 240L280 260L180 380' stroke='white' stroke-width='25' stroke-linecap='round' stroke-linejoin='round' opacity='0.9'/%3E%3C/svg%3E">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
